# extension-curve

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  inkvn-curve.inx  inkvn.inx  pyproject.toml  tox.ini
inkvn/: __main__.py  const.py  curve_util.py  utils.py  vninput.py
inkvn/elements/: artboard.py  base.py  group.py  guide.py  image.py  path.py  styles.py  text.py
inkvn/legacy/: decoders.py  exporters.py  extractors.py  open_trash.py  open_vectornator.py  styles.py  text.py  transform.py
inkvn/reader/: datatypes.py  decode.py  decode_vn.py  extract.py  read.py  text.py
inkvn/svg/: convert.py
tests/converter/: test_convert.py
tests/converter/data/: artboards_and_guides.vectornator  artboards_and_guides_44.curve  artboards_and_guides_51.curve  blend_modes.vectornator  blend_modes_44.curve  blend_modes_51.curve  blur.vectornator  blur_44.curve  blur_51.curve  brush.vectornator  brush_44.curve  brush_51.curve  gradient.vectornator  gradient_44.curve  gradient_51.curve  image.vectornator  image_40.curve  image_44.curve  image_51.curve  text.vectornator  text_44.curve  text_51.curve  variousshapes.curve  variousshapes.vectornator  variousshapes_44.curve  variousshapes_51.curve
tests/converter/data/refs/: inkvn.vninput__--pretty__blend_modes__vectornator.out  inkvn.vninput__--pretty__blur__curve.out  inkvn.vninput__--pretty__gradient__curve.out  inkvn.vninput__--pretty__gradient__vectornator.out  inkvn.vninput__--pretty__true__artboards_and_guides__curve.out  inkvn.vninput__--pretty__true__blend_modes__curve.out  inkvn.vninput__--pretty__true__blur__vectornator.out  inkvn.vninput__--pretty__true__image__curve.out  inkvn.vninput__--pretty__variousshapes__curve.out  inkvn.vninput__artboards_and_guides_51__curve.out  inkvn.vninput__artboards_and_guides__curve.out  inkvn.vninput__artboards_and_guides__vectornator.out  inkvn.vninput__blend_modes_44__curve.out  inkvn.vninput__blend_modes__curve.out  (+20 more)
tests/reader/: test_extract.py  test_text.py
