[tool.poetry]
name = "inkvn"
version = "0.1.0"
description = "Inkscape extension to import Linearity Curve (formerly Vectornator) files"
authors = ["Inkscape Authors <inkscape-devel@lists.inkscape.org>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://gitlab.com/inkscape/extras/extension-curve"
keywords = ["extensions", "graphics", "inkscape", "svg", "vector"]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
inkex = {git = "https://gitlab.com/inkscape/extensions", rev = "1.4.x"}
pygobject = "3.54.0" # workaround for https://github.com/beeware/toga/issues/3143, remove when inkex removes the gui deps


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mypy = "^1.18.2"
pre-commit = "^4.3.0"
pytest-cov = "^7.0.0"
coverage = "^7.11"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9.0"
